--- a/src/main/resources/View/Patient_Dashboard.fxml
+++ b/src/main/resources/View/Patient_Dashboard.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="AnchorpaneMainPatient" prefHeight="623.0" prefWidth="929.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.hospital_system.controller.Patient.PatientDashboard">
+<AnchorPane fx:id="AnchorpaneMainPatient" prefHeight="623.0" prefWidth="929.0" style="-fx-background-color: #e6e7fc;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.icet.hospital_system.controller.Patient.PatientDashboard">
    <children>
       <Rectangle arcHeight="40.0" arcWidth="40.0" fill="#011223" height="616.0" layoutX="6.0" layoutY="4.0" stroke="BLACK" strokeType="INSIDE" width="191.0" />
       <Rectangle arcHeight="100.0" arcWidth="100.0" fill="WHITE" height="121.0" layoutX="39.0" layoutY="20.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="129.0" />
@@ -21,9 +21,9 @@
             <Image url="@../Image/user.png" />
          </image>
       </ImageView>
-      <Text layoutX="378.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Thin 100;" text="Patient Dashboard" textAlignment="CENTER" wrappingWidth="418.1368408203125">
+      <Text layoutX="355.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-family: Thin 100;" text="Patient Dashboard" textAlignment="CENTER" wrappingWidth="418.1368408203125">
          <font>
-            <Font name="System Bold" size="22.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
          <fill>
             <LinearGradient endX="1.0" endY="1.0" startX="0.3333333179806218" startY="0.2878788023283988">
@@ -48,17 +48,17 @@
             <Image url="@../Image/back.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="btnAappointment" layoutX="32.0" layoutY="250.0" onAction="#btnAappointmentAction" prefHeight="34.0" prefWidth="143.0" style="-fx-background-color: #ffff;" text="Appointment">
+      <JFXButton fx:id="btnAappointment" layoutX="32.0" layoutY="250.0" onAction="#btnAappointmentAction" prefHeight="34.0" prefWidth="143.0" style="-fx-background-color: #c4c8ff;" text="Appointment">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="32.0" layoutY="318.0" onAction="#btnProfileAction" prefHeight="34.0" prefWidth="143.0" style="-fx-background-color: #ff9999;" text="Profile">
+      <JFXButton layoutX="32.0" layoutY="318.0" onAction="#btnProfileAction" prefHeight="34.0" prefWidth="143.0" style="-fx-background-color: #c4c8ff;" text="Profile">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="32.0" layoutY="388.0" onAction="#btnPaymentAction" prefHeight="34.0" prefWidth="143.0" style="-fx-background-color: #ffff;" text="Payment">
+      <JFXButton layoutX="32.0" layoutY="388.0" onAction="#btnPaymentAction" prefHeight="34.0" prefWidth="143.0" style="-fx-background-color: #c4c8ff;" text="Payment">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
@@ -69,7 +69,7 @@
          </font>
       </Label>
       <AnchorPane fx:id="DashboardLoadAnchorpanePatient" layoutX="202.0" layoutY="37.0" prefHeight="583.0" prefWidth="724.0" />
-      <JFXButton layoutX="33.0" layoutY="448.0" onAction="#btnViewAction" prefHeight="34.0" prefWidth="143.0" style="-fx-background-color: #ffff;" text="View">
+      <JFXButton layoutX="33.0" layoutY="448.0" onAction="#btnViewAction" prefHeight="34.0" prefWidth="143.0" style="-fx-background-color: #c4c8ff;" text="View">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
